          02-08-07  Bfo     idevs: added option -r
          02-08-08  Bfo     sleep 0 bug for 1/256th fixed.
          02-08-08  Bfo     F$SetSys extended with D_PrcDBT support.
          02-08-09  Bfo     The "real" process descriptor prepared due to problems with "time" and "ps"
          02-08-09  Bfo     New procedure set_os9_state introduced and adapted everywhere.
    3.16  02-08-??  Bfo     ...
    -------------------
*/




/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    !!  "show" is using some unimplemented FPU calls.
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   "plotf" orig/max times not correct, problem in UAE FPU => workaround: use plotf instead of plotf020
    -   Linux telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   Mouse movements on XServer still slow and jumpy.
    -   MGP slow startup problems (NT 4.0).
    -   Problems 'ps -e' and check memory info of "ps" (for trap handlers)
    -   inode support for transparent Mac file system
    -   A$AtDate restricted to 248 days / will not adjust when system time changes

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
   (-)  'pragma unused' not possible with gcc (Linux): cuts the file there !!
   (-)  mfree "os9serial" too small ??
*/


/* To do: */
/*
    -   RBF algorithm is not yet adapted for multisector support
    -   RBF disk cache not yet implemented.
    -   RBF: do read only, if write larger than a sector
    -   SCSI subsystem for Linux
    -   "ping" for Windows & Linux, ping of ISP.
    -   socket close not done in every case
    -   nameserver support for network
    -   direct line editing on linux (over network)